# sflang

./: .gitignore  Cargo.toml  README.md  README_CN.md  go.mod  install.ps1  install.sh  main.go
.github/workflows/: release.yml
ast/: ast.go
builtin/: builtin.go
compiler/: compiler.go  opcodes.go  symbol_table.go
docs/: LANGUAGE.md
examples/: 001_helloWorld.sf  002_basic.sf  003_var.sf  004_add.sf  005_if.sf  006_for.sf  007_func.sf  008_array.sf  009_map.sf  010_fib.sf  011_tryCatch.sf  012_bigint.sf  013_bigfloat.sf  014_array.sf  addBom.sf  anonymousFunc.sf  sample01_001_hello.sf  sample01_002_print.sf  sample01_003_vars.sf  sample01_004_comments.sf  sample01_005_function.sf  sample01_006_types.sf  sample01_007_operators.sf  sample02_01_undefined.sf  sample02_02_bool.sf  sample02_03_int.sf  sample02_03_numbers.sf  sample02_04_float.sf  sample02_04_string.sf  sample02_05_byte.sf  sample02_05_containers.sf  sample02_06_array.sf  sample02_06_map_object.sf  sample02_07_object.sf  sample02_08_map.sf  sample02_09_bytes.sf  sample02_10_string_interp.sf  sample03_01_loops.sf  sample03_02_conditionals.sf  sample03_03_switch.sf  (+7 more)
examples/charlang/: 001_helloWorld.sf  addBom.sf  anonymousFunc.sf  array.sf  arrayContains.sf  basic.sf  bigFloat.sf  bigInt.sf  binCompare.sf  bitwise.sf  bmi.sf  bmi1.sf  bool.sf  bytes.sf  bytes2.sf  calCosineSimilarity.sf  calCosineSimilarityBig.sf  calDistanceBetweenLatLon.sf  char.sf  charCodeAsFunc.sf  checkErr.sf  commandLine.sf  comments.sf  commonTest.sf  compile1.sf  compile2.sf  compiledFunc.sf  concurrent.sf  const.sf  copy.sf  countFiles.sf  countLineDuplicates.sf  csv1.sf  dataTypes.sf  dbPlaceholder.sf  debug1.sf  delegate1.sf  delegate2.sf  docxDemo.sf  error1.sf  (+85 more)
examples/server/: README.md  advanced.sf  basic.sf  concurrent.sf  http_client.sf  json_api.sf  websocket_client.sf
examples/server/scripts/: .sfAllow  api.sf  data.csv  demo.sfp  form.sf  index.sf  test.sfp
examples/showcase/: build_and_deploy.sf  concurrency_demo.sf  crypto_demo.sf  csv_excel_db.sf  data_pipeline.sf  db_demo.sf  deploy_tool.sf  email_demo.sf  error_handling.sf  extra_functions_demo.sf  getSwitch_demo.sf  group_decl_demo.sf  help_demo.sf  image_demo.sf  image_gen_demo.sf  label_break_demo.sf  le_demo.sf  medium_demo.sf  proxy_demo.sf  ring_stringbuilder.sf  s3_demo.sf  seq_demo.sf  sf_editor.sf  ssh_demo.sf  system_demo.sf  tcp_demo.sf  utilities_demo.sf  xxci_demo.sf  zip_demo.sf
lexer/: lexer.go  token.go
object/: array.go  bigfloat.go  bigint.go  boolean.go  builtin.go  byte.go  bytes.go  char.go  chars.go  closure.go  environment.go  error.go  file.go  float.go  function.go  integer.go  map.go  null.go  object.go  return.go  string.go  time.go
parser/: parser.go
repl/: repl.go
sf/: Cargo.toml
sf/src/: main.rs
sflang/: Cargo.toml
sflang/src/: aes.rs  api.rs  ast.rs  bigfloat.rs  bigint.rs  builtins.rs  builtins_aes.rs  builtins_arr.rs  builtins_async.rs  builtins_bigint.rs  builtins_bytes.rs  builtins_cfg.rs  builtins_clipboard.rs  builtins_containers.rs  builtins_csv.rs  builtins_db.rs  builtins_dialog.rs  builtins_docx.rs  builtins_email.rs  builtins_encode.rs  builtins_fs.rs  builtins_ftp.rs  builtins_gui.rs  builtins_hash.rs  builtins_helpers.rs  builtins_http.rs  builtins_image.rs  builtins_image_gen.rs  builtins_json.rs  builtins_jwt.rs  builtins_le.rs  builtins_math.rs  builtins_pinyin.rs  builtins_proxy.rs  builtins_regex.rs  builtins_ring.rs  builtins_s3.rs  builtins_seq.rs  builtins_ssh.rs  builtins_str.rs  (+30 more)
sflang/tests/: api_test.rs
vm/: frame.go  vm.go
