# Sflang Cargo workspace
#
# 包含两个成员：
#   - sflang: 语言核心库（lexer/parser/compiler/vm/builtins），可被其他 Rust 程序嵌入
#   - sf:     主程序（CLI + REPL），依赖 sflang 库

[workspace]
members = ["sflang", "sf"]
resolver = "2"

# workspace 级别的依赖统一管理
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["topxeq"]
license = "MIT"
repository = "https://github.com/topxeq/sflang"

# workspace 依赖（第三方库在此统一声明版本）
[workspace.dependencies]
# regex：rust-lang 官方正则库（MIT OR Apache-2.0），用于 reg* 内置函数。
regex = "1"
# windows-sys：Windows API 绑定（仅 Windows 编译，用于控制台编码转换）。
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Globalization"] }
# rust_xlsxwriter：写 Excel xlsx 文件（MIT OR Apache-2.0, jmcnamara），用于 excel* 写入函数。
rust_xlsxwriter = "0.79"
# calamine：读 Excel xlsx/xls/ods 文件（MIT, tafia），用于 excel* 读取函数。
calamine = "0.26"
# zip：ZIP 压缩/解压（MIT），用于 docx 读写（docx 本质是 ZIP 包）。
zip = "2.4"
# rusqlite：SQLite 数据库（MIT + SQLite 公有领域），bundled 模式自带 C 源码，零配置。
rusqlite = { version = "0.32", features = ["bundled"] }
# mysql：纯 Rust MySQL 驱动（MIT/MPL-2.0），同步 API + 连接池。
mysql = "26"
# postgres：PostgreSQL 同步驱动（MIT OR Apache-2.0, sfackler）。
postgres = "0.19"
# postgres-types：PostgreSQL 类型转换（MIT OR Apache-2.0, postgres crate 的子 crate）。
postgres-types = "0.2"
# tiberius：纯 Rust MSSQL/SQL Server 驱动（MIT），异步 API，用 tokio 桥接为同步。
tiberius = "0.12"
# tokio：异步运行时（MIT），postgres 和 tiberius 间接依赖，显式声明用于 block_on 桥接。
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
# tokio-util：tokio 工具（MIT），tiberius 需要 compat 层桥接 tokio TcpStream。
tokio-util = { version = "0.7", features = ["compat"] }
# futures-util：Stream 处理（MIT），tiberius 查询结果收集。
futures-util = "0.3"
# oracle-rs：纯 Rust Oracle TNS 驱动（MIT OR Apache-2.0），无 OCI 依赖。
oracle-rs = "0.1"
# wry：跨平台 WebView 封装（MIT/Apache-2.0），用于 GUI 编程。
# Windows 用 WebView2，macOS 用 WKWebView，Linux 用 WebKitGTK。
wry = "0.46"
# tao：跨平台窗口管理（MIT/Apache-2.0），wry 的窗口层。
tao = "0.32"
# russh：纯 Rust SSH 客户端/服务端库（Apache-2.0），用于 ssh* 内置函数。
russh = "0.46"
# russh-keys：SSH 密钥处理（Apache-2.0/MIT），russh 的子 crate。
russh-keys = "0.46"
# async-trait：异步 trait 宏（MIT/Apache-2.0），russh Handler 需要。
async-trait = "0.1"
# russh-sftp：SFTP 子系统（Apache-2.0/MIT），用于 SFTP 文件传输。
russh-sftp = "2.0"

# 编译优化配置：release 模式启用 LTO 与单代码生成单元，最大化优化
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
