# Sflang Cargo workspace
#
# 包含两个成员：
#   - sflang: 语言核心库（lexer/parser/compiler/vm/builtins），可被其他 Rust 程序嵌入
#   - sf:     主程序（CLI + REPL），依赖 sflang 库

[workspace]
members = ["sflang", "sf"]
resolver = "2"

# workspace 级别的依赖统一管理
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["topxeq"]
license = "MIT"
repository = "https://github.com/topxeq/sflang"

# workspace 依赖（第三方库在此统一声明版本）
[workspace.dependencies]
# regex：rust-lang 官方正则库（MIT OR Apache-2.0），用于 reg* 内置函数。
regex = "1"
# windows-sys：Windows API 绑定（仅 Windows 编译）。
# features：控制台编码转换 + 剪贴板读写（DataExchange + Memory + Gdi）
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Globalization", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Graphics_Gdi"] }
# rust_xlsxwriter：写 Excel xlsx 文件（MIT OR Apache-2.0, jmcnamara），用于 excel* 写入函数。
rust_xlsxwriter = "0.79"
# calamine：读 Excel xlsx/xls/ods 文件（MIT, tafia），用于 excel* 读取函数。
calamine = "0.26"
# zip：ZIP 压缩/解压（MIT），用于 docx 读写和 zip* 内置函数。
zip = "2.4"
# encoding_rs：网页字符编码转换（MIT OR Apache-2.0），用于 zip 中文文件名 GBK 兼容。
# 纯 Rust 实现，无 C 依赖，且已是 zip 的传递依赖。
encoding_rs = "0.8"
# flate2：deflate/gzip 压缩（MIT OR Apache-2.0），用于 compressBytes/gzipBytes 内置函数。
# 纯 Rust 后端（miniz_oxide），无 C 依赖，且已是 zip 的传递依赖。
flate2 = "1"
# rusqlite：SQLite 数据库（MIT + SQLite 公有领域），bundled 模式自带 C 源码，零配置。
rusqlite = { version = "0.32", features = ["bundled"] }
# mysql：纯 Rust MySQL 驱动（MIT/MPL-2.0），同步 API + 连接池。
mysql = "26"
# postgres：PostgreSQL 同步驱动（MIT OR Apache-2.0, sfackler）。
postgres = "0.19"
# postgres-types：PostgreSQL 类型转换（MIT OR Apache-2.0, postgres crate 的子 crate）。
postgres-types = "0.2"
# tiberius：纯 Rust MSSQL/SQL Server 驱动（MIT），异步 API，用 tokio 桥接为同步。
tiberius = "0.12"
# tokio：异步运行时（MIT），postgres 和 tiberius 间接依赖，显式声明用于 block_on 桥接。
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
# tokio-util：tokio 工具（MIT），tiberius 需要 compat 层桥接 tokio TcpStream。
tokio-util = { version = "0.7", features = ["compat"] }
# futures-util：Stream 处理（MIT），tiberius 查询结果收集。
futures-util = "0.3"
# oracle-rs：纯 Rust Oracle TNS 驱动（MIT OR Apache-2.0），无 OCI 依赖。
oracle-rs = "0.1"
# suppaftp：纯 Rust FTP/FTPS 客户端（MIT OR Apache-2.0），用于 ftp* 内置函数。
suppaftp = "10"
# wry：跨平台 WebView 封装（MIT/Apache-2.0），用于 GUI 编程。
# Windows 用 WebView2，macOS 用 WKWebView，Linux 用 WebKitGTK。
wry = "0.46"
# tao：跨平台窗口管理（MIT/Apache-2.0），wry 的窗口层。
tao = "0.32"
# russh：纯 Rust SSH 客户端/服务端库（Apache-2.0），用于 ssh* 内置函数。
russh = "0.46"
# russh-keys：SSH 密钥处理（Apache-2.0/MIT），russh 的子 crate。
russh-keys = "0.46"
# async-trait：异步 trait 宏（MIT/Apache-2.0），russh Handler 需要。
async-trait = "0.1"
# russh-sftp：SFTP 子系统（Apache-2.0/MIT），用于 SFTP 文件传输。
russh-sftp = "2.0"
# rustls：纯 Rust TLS 实现（Apache-2.0/MIT/ISC），用于 HTTPS 服务器。
# 不依赖系统 OpenSSL/SChannel，跨平台行为一致。
rustls = "0.23"
# rustls-pemfile：解析 PEM 格式证书文件（Apache-2.0/MIT），rustls 配套。
rustls-pemfile = "2"
# tungstenite：轻量同步 WebSocket 库（MIT OR Apache-2.0），不引入 async runtime。
# 契合 Sflang 同步 VM 模型。启用 url（客户端 connect 支持 ws://wss:// URL 解析）。
tungstenite = { version = "0.24", features = ["url", "handshake"] }
# webpki-roots：Mozilla 内置根证书（ISC），用于 HTTPS 客户端验证。
# 作为系统证书不可用时的 fallback。
webpki-roots = "0.26"
# rustls-native-certs：从系统证书库加载根证书（Apache-2.0/MIT）。
# Windows 用 SChannel，Linux 用 /etc/ssl/certs，macOS 用 Keychain。
rustls-native-certs = "0.7"
# image：Rust 生态最成熟的图像处理库（MIT OR Apache-2.0），纯 Rust 实现。
# 支持 PNG/JPEG/GIF/BMP/WebP 编解码 + 缩放/裁剪/旋转等基本操作。
# 用于 imageLoad/imageSave/imageResize 等内置函数。
image = "0.25"
# rusttype：TrueType 字体渲染库（MIT OR Apache-2.0），纯 Rust 实现。
# 用于 Canvas 画布的 drawText 文字渲染。
rusttype = "0.9"
# rsa：纯 Rust RSA 加密库（MIT OR Apache-2.0），已是 SSH 的传递依赖。
# 用于 JWT RS256 签名/验签。
rsa = "0.9"
# pkcs8：PKCS#8 私钥/公钥格式解析（MIT OR Apache-2.0），rsa 配套，已是传递依赖。
# 用于解析 PEM 格式的 RSA 密钥。
pkcs8 = { version = "0.10", features = ["alloc"] }

# 编译优化配置：release 模式启用 LTO 与单代码生成单元，最大化优化
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
