[package]
name = "sf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sflang language interpreter CLI"

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
sflang = { path = "../sflang" }
