[package]
name = "sflang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A lightweight, fast interpreted programming language"
keywords = ["language", "interpreter", "bytecode", "vm"]
categories = ["compilers", "development-tools"]

[lib]
name = "sflang"
path = "src/lib.rs"

[dependencies]
# 正则库（rust-lang 官方，workspace 统一管理版本）
regex = { workspace = true }
# Excel 读写（rust_xlsxwriter 写 + calamine 读，workspace 统一管理版本）
rust_xlsxwriter = { workspace = true }
calamine = { workspace = true }
# ZIP 压缩/解压（用于 docx 读写，docx 本质是 ZIP 包）
zip = { workspace = true }
# SQLite 数据库（bundled 模式，零配置）
rusqlite = { workspace = true }
# MySQL 数据库（纯 Rust 同步驱动 + 连接池）
mysql = { workspace = true }
# PostgreSQL 数据库（同步驱动）
postgres = { workspace = true }
postgres-types = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
