[package]
name = "sflang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A lightweight, fast interpreted programming language"
keywords = ["language", "interpreter", "bytecode", "vm"]
categories = ["compilers", "development-tools"]

[lib]
name = "sflang"
path = "src/lib.rs"

[dependencies]
# 正则库（rust-lang 官方，workspace 统一管理版本）
regex = { workspace = true }
# Excel 读写（rust_xlsxwriter 写 + calamine 读，workspace 统一管理版本）
rust_xlsxwriter = { workspace = true }
calamine = { workspace = true }
# ZIP 压缩/解压（用于 docx 读写 + zip* 内置函数）
zip = { workspace = true }
# 字符编码转换（用于 zip 中文文件名 GBK 兼容）
encoding_rs = { workspace = true }
# deflate/gzip 压缩（用于 compressBytes/gzipBytes 内置函数）
flate2 = { workspace = true }
# SQLite 数据库（bundled 模式，零配置）
rusqlite = { workspace = true }
# MySQL 数据库（纯 Rust 同步驱动 + 连接池）
mysql = { workspace = true }
# PostgreSQL 数据库（同步驱动）
postgres = { workspace = true }
postgres-types = { workspace = true }
# MSSQL/SQL Server 数据库（纯 Rust 异步驱动，用 tokio 桥接为同步）
tiberius = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
# Oracle 数据库（纯 Rust TNS 驱动，无 OCI 依赖）
oracle-rs = { workspace = true }
# FTP 客户端（纯 Rust FTP/FTPS）
suppaftp = { workspace = true }
# GUI WebView 支持
wry = { workspace = true }
tao = { workspace = true }
# SSH 客户端
russh = { workspace = true }
russh-keys = { workspace = true }
async-trait = { workspace = true }
russh-sftp = { workspace = true }
lettre = "0.11.22"
# HTTPS/TLS 支持（纯 Rust TLS）
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
# WebSocket 支持（轻量同步库）
tungstenite = { workspace = true }
# HTTPS 客户端根证书
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
